# snakes-cafe

./: README.md  pyproject.toml
snakes_cafe/: snakes_cafe.py
